--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -640,10 +640,6 @@ video {
   top: 0.5rem;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
 .top-3 {
   top: 0.75rem;
 }
@@ -658,6 +654,10 @@ video {
 
 .top-9 {
   top: 2.25rem;
+}
+
+.top-20 {
+  top: 5rem;
 }
 
 .-top-20 {
@@ -1092,10 +1092,6 @@ video {
   width: 16rem;
 }
 
-.w-7\/12 {
-  width: 58.333333%;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -1106,10 +1102,6 @@ video {
 
 .w-9 {
   width: 2.25rem;
-}
-
-.w-9\/12 {
-  width: 75%;
 }
 
 .w-96 {
@@ -1205,6 +1197,22 @@ video {
   width: 100vw;
 }
 
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
+.w-\[30rem\] {
+  width: 30rem;
+}
+
+.w-7\/12 {
+  width: 58.333333%;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1242,6 +1250,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.resize {
+  resize: both;
 }
 
 .flex-row {
@@ -1288,6 +1300,10 @@ video {
   justify-content: space-around;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1328,11 +1344,6 @@ video {
   gap: 2rem;
 }
 
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-}
-
 .gap-x-3 {
   -moz-column-gap: 0.75rem;
        column-gap: 0.75rem;
@@ -1348,6 +1359,11 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .overflow-auto {
@@ -1539,11 +1555,6 @@ video {
   background-color: rgb(52 131 250 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#363559\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(54 53 89 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#39394B\] {
   --tw-bg-opacity: 1;
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
@@ -1689,6 +1700,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#363559\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 53 89 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#44a044\] {
@@ -2005,14 +2021,6 @@ video {
   font-size: 18px;
 }
 
-.text-\[1rem\] {
-  font-size: 1rem;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
 .text-\[22px\] {
   font-size: 22px;
 }
@@ -2043,6 +2051,14 @@ video {
 
 .text-\[65px\] {
   font-size: 65px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
 }
 
 .font-bold {
@@ -2076,11 +2092,6 @@ video {
 .text-\[\#0f0\] {
   --tw-text-opacity: 1;
   color: rgb(0 255 0 / var(--tw-text-opacity));
-}
-
-.text-\[\#1C72B2\] {
-  --tw-text-opacity: 1;
-  color: rgb(28 114 178 / var(--tw-text-opacity));
 }
 
 .text-\[\#1f1e1e\] {
@@ -2251,9 +2262,9 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-\[\#aaaaaa\] {
+.text-\[\#1C72B2\] {
   --tw-text-opacity: 1;
-  color: rgb(170 170 170 / var(--tw-text-opacity));
+  color: rgb(28 114 178 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
@@ -2631,6 +2642,12 @@ video {
 
 @media (min-width: 1280px) {
   .xl\:h-screen {
+    height: 100vh;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:h-screen {
     height: 100vh;
   }
 }
