--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -592,6 +592,10 @@ video {
   right: -20rem;
 }
 
+.-top-20 {
+  top: -5rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -640,6 +644,10 @@ video {
   top: 0.5rem;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
 .top-3 {
   top: 0.75rem;
 }
@@ -654,14 +662,6 @@ video {
 
 .top-9 {
   top: 2.25rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.-top-20 {
-  top: -5rem;
 }
 
 .z-0 {
@@ -725,6 +725,16 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.mx-20 {
+  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
 .mb-0 {
@@ -879,6 +889,10 @@ video {
   height: 25%;
 }
 
+.h-1\/6 {
+  height: 16.666667%;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -917,6 +931,10 @@ video {
 
 .h-3\/6 {
   height: 50%;
+}
+
+.h-36 {
+  height: 9rem;
 }
 
 .h-4 {
@@ -988,12 +1006,20 @@ video {
   height: 100vh;
 }
 
-.h-\[500px\] {
-  height: 500px;
+.h-\[10rem\] {
+  height: 10rem;
 }
 
-.h-1\/6 {
-  height: 16.666667%;
+.h-\[40rem\] {
+  height: 40rem;
+}
+
+.h-\[30rem\] {
+  height: 30rem;
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .w-1\/5 {
@@ -1088,8 +1114,16 @@ video {
   width: 1.5rem;
 }
 
+.w-6\/12 {
+  width: 50%;
+}
+
 .w-64 {
   width: 16rem;
+}
+
+.w-7\/12 {
+  width: 58.333333%;
 }
 
 .w-8 {
@@ -1102,6 +1136,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-9\/12 {
+  width: 75%;
 }
 
 .w-96 {
@@ -1197,20 +1235,8 @@ video {
   width: 100vw;
 }
 
-.w-9\/12 {
-  width: 75%;
-}
-
-.w-\[700px\] {
-  width: 700px;
-}
-
-.w-\[30rem\] {
-  width: 30rem;
-}
-
-.w-7\/12 {
-  width: 58.333333%;
+.w-8\/12 {
+  width: 66.666667%;
 }
 
 .min-w-\[180px\] {
@@ -1223,6 +1249,10 @@ video {
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .origin-center {
@@ -1250,10 +1280,6 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.resize {
-  resize: both;
 }
 
 .flex-row {
@@ -1300,10 +1326,6 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1344,6 +1366,11 @@ video {
   gap: 2rem;
 }
 
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-x-3 {
   -moz-column-gap: 0.75rem;
        column-gap: 0.75rem;
@@ -1361,17 +1388,24 @@ video {
   row-gap: 1.75rem;
 }
 
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-}
-
 .overflow-auto {
   overflow: auto;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-scroll {
+  overflow: scroll;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .text-ellipsis {
@@ -1481,6 +1515,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
 .border-opacity-5 {
   --tw-border-opacity: 0.05;
 }
@@ -1555,6 +1594,11 @@ video {
   background-color: rgb(52 131 250 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#363559\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 53 89 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#39394B\] {
   --tw-bg-opacity: 1;
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
@@ -1568,6 +1612,11 @@ video {
 .bg-\[\#404062\] {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 98 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#44a044\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(68 160 68 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#483dda\] {
@@ -1702,14 +1751,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#363559\] {
+.bg-\[\#39385B\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(54 53 89 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#44a044\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(68 160 68 / var(--tw-bg-opacity));
+  background-color: rgb(57 56 91 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-br {
@@ -1810,6 +1854,10 @@ video {
   padding: 2rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1885,6 +1933,26 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1905,6 +1973,10 @@ video {
   padding-left: 0.5rem;
 }
 
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
 .pr-2 {
   padding-right: 0.5rem;
 }
@@ -1915,6 +1987,10 @@ video {
 
 .pr-4 {
   padding-right: 1rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .pt-0 {
@@ -1945,12 +2021,24 @@ video {
   padding-top: 1rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
-.pr-5 {
-  padding-right: 1.25rem;
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pl-16 {
+  padding-left: 4rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
 }
 
 .text-left {
@@ -2021,6 +2109,14 @@ video {
   font-size: 18px;
 }
 
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
 .text-\[22px\] {
   font-size: 22px;
 }
@@ -2051,14 +2147,6 @@ video {
 
 .text-\[65px\] {
   font-size: 65px;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
-.text-\[1rem\] {
-  font-size: 1rem;
 }
 
 .font-bold {
@@ -2092,6 +2180,11 @@ video {
 .text-\[\#0f0\] {
   --tw-text-opacity: 1;
   color: rgb(0 255 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#1C72B2\] {
+  --tw-text-opacity: 1;
+  color: rgb(28 114 178 / var(--tw-text-opacity));
 }
 
 .text-\[\#1f1e1e\] {
@@ -2260,11 +2353,6 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
-.text-\[\#1C72B2\] {
-  --tw-text-opacity: 1;
-  color: rgb(28 114 178 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
@@ -2642,12 +2730,6 @@ video {
 
 @media (min-width: 1280px) {
   .xl\:h-screen {
-    height: 100vh;
-  }
-}
-
-@media (min-width: 1536px) {
-  .\32xl\:h-screen {
     height: 100vh;
   }
 }
