--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -576,6 +576,10 @@ video {
   position: fixed;
 }
 
+.\!absolute {
+  position: absolute !important;
+}
+
 .absolute {
   position: absolute;
 }
@@ -668,6 +672,10 @@ video {
   z-index: 0;
 }
 
+.\!-m-px {
+  margin: -1px !important;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -725,16 +733,6 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
 }
 
 .mb-0 {
@@ -865,6 +863,10 @@ video {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .inline {
   display: inline;
 }
@@ -883,6 +885,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.\!h-px {
+  height: 1px !important;
 }
 
 .h-1\/4 {
@@ -993,6 +999,10 @@ video {
   height: 40px;
 }
 
+.h-\[40rem\] {
+  height: 40rem;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1006,20 +1016,12 @@ video {
   height: 100vh;
 }
 
-.h-\[10rem\] {
-  height: 10rem;
+.h-44 {
+  height: 11rem;
 }
 
-.h-\[40rem\] {
-  height: 40rem;
-}
-
-.h-\[30rem\] {
-  height: 30rem;
-}
-
-.max-h-full {
-  max-height: 100%;
+.\!w-px {
+  width: 1px !important;
 }
 
 .w-1\/5 {
@@ -1064,6 +1066,10 @@ video {
 
 .w-3\/4 {
   width: 75%;
+}
+
+.w-3\/6 {
+  width: 50%;
 }
 
 .w-32 {
@@ -1114,10 +1120,6 @@ video {
   width: 1.5rem;
 }
 
-.w-6\/12 {
-  width: 50%;
-}
-
 .w-64 {
   width: 16rem;
 }
@@ -1128,6 +1130,10 @@ video {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-8\/12 {
+  width: 66.666667%;
 }
 
 .w-80 {
@@ -1235,14 +1241,6 @@ video {
   width: 100vw;
 }
 
-.w-8\/12 {
-  width: 66.666667%;
-}
-
-.w-8\/12 {
-  width: 66.666667%;
-}
-
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1253,10 +1251,6 @@ video {
 
 .max-w-lg {
   max-width: 32rem;
-}
-
-.max-w-full {
-  max-width: 100%;
 }
 
 .origin-center {
@@ -1396,24 +1390,20 @@ video {
   overflow: auto;
 }
 
+.\!overflow-hidden {
+  overflow: hidden !important;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
 
-.overflow-scroll {
-  overflow: scroll;
-}
-
-.overflow-x-scroll {
-  overflow-x: scroll;
-}
-
-.overflow-y-scroll {
-  overflow-y: scroll;
-}
-
 .text-ellipsis {
   text-overflow: ellipsis;
+}
+
+.\!whitespace-nowrap {
+  white-space: nowrap !important;
 }
 
 .whitespace-nowrap {
@@ -1462,12 +1452,24 @@ video {
   border-bottom-right-radius: 9999px;
 }
 
+.\!border-0 {
+  border-width: 0px !important;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-4 {
+  border-width: 4px;
+}
+
+.border-solid {
+  border-style: solid;
 }
 
 .border-\[\#07A1F8\] {
@@ -1482,6 +1484,10 @@ video {
 .border-blue-500 {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.border-current {
+  border-color: currentColor;
 }
 
 .border-gray-200 {
@@ -1519,9 +1525,8 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-gray-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+.border-r-transparent {
+  border-right-color: transparent;
 }
 
 .border-opacity-5 {
@@ -1601,6 +1606,11 @@ video {
 .bg-\[\#363559\] {
   --tw-bg-opacity: 1;
   background-color: rgb(54 53 89 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#39385B\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(57 56 91 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#39394B\] {
@@ -1755,11 +1765,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#39385B\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(57 56 91 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
@@ -1826,6 +1831,10 @@ video {
   stroke-width: 10%;
 }
 
+.\!p-0 {
+  padding: 0px !important;
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -1856,10 +1865,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-1 {
@@ -1937,26 +1942,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1975,6 +1960,10 @@ video {
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
 }
 
 .pl-3 {
@@ -2025,26 +2014,6 @@ video {
   padding-top: 1rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.pl-16 {
-  padding-left: 4rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2059,6 +2028,10 @@ video {
 
 .text-start {
   text-align: start;
+}
+
+.align-\[-0\.125em\] {
+  vertical-align: -0.125em;
 }
 
 .text-14 {
@@ -2394,6 +2367,10 @@ video {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
+.\!\[clip\:rect\(0\2c 0\2c 0\2c 0\)\] {
+  clip: rect(0,0,0,0) !important;
+}
+
 .placeholder\:text-gray-500::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2539,6 +2516,18 @@ video {
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+}
+
+@media (prefers-reduced-motion: reduce) {
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .motion-reduce\:animate-\[spin_1\.5s_linear_infinite\] {
+    animation: spin 1.5s linear infinite;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
