--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -668,6 +668,10 @@ video {
   top: 2.25rem;
 }
 
+.left-3 {
+  left: 0.75rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -1300,6 +1304,26 @@ video {
 
 .w-0 {
   width: 0px;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-2\/6 {
+  width: 33.333333%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
+}
+
+.w-3\/12 {
+  width: 25%;
 }
 
 .min-w-\[180px\] {
@@ -2216,6 +2240,14 @@ video {
 
 .text-\[65px\] {
   font-size: 65px;
+}
+
+.text-\[2\.5rem\] {
+  font-size: 2.5rem;
+}
+
+.text-\[3rem\] {
+  font-size: 3rem;
 }
 
 .font-bold {
