--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -744,6 +744,11 @@ video {
   margin-bottom: 13rem;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -866,6 +871,10 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -1896,6 +1905,16 @@ video {
   background-color: rgb(228 201 240 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#000000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#468866\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(70 136 102 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -2489,6 +2508,11 @@ video {
   color: rgb(65 65 66 / var(--tw-text-opacity));
 }
 
+.text-\[\#bbbaba\] {
+  --tw-text-opacity: 1;
+  color: rgb(187 186 186 / var(--tw-text-opacity));
+}
+
 .text-opacity-100 {
   --tw-text-opacity: 1;
 }
@@ -2772,6 +2796,11 @@ video {
     background-color: transparent;
   }
 
+  .dark\:bg-\[\#161616\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(22 22 22 / var(--tw-bg-opacity));
+  }
+
   .dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2830,6 +2859,11 @@ video {
   .dark\:hover\:bg-gray-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-\[\#1f1f1f\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 31 31 / var(--tw-bg-opacity));
   }
 
   .dark\:hover\:text-white:hover {
