--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -672,6 +672,18 @@ video {
   left: 0.75rem;
 }
 
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-\[250px\] {
+  bottom: 250px;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -875,6 +887,10 @@ video {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
@@ -2513,6 +2529,16 @@ video {
   color: rgb(187 186 186 / var(--tw-text-opacity));
 }
 
+.text-\[\#AFACAC\] {
+  --tw-text-opacity: 1;
+  color: rgb(175 172 172 / var(--tw-text-opacity));
+}
+
+.text-\[\#07A1F8\] {
+  --tw-text-opacity: 1;
+  color: rgb(7 161 248 / var(--tw-text-opacity));
+}
+
 .text-opacity-100 {
   --tw-text-opacity: 1;
 }
@@ -2670,6 +2696,11 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .hover\:text-\[\#3570bd\]:hover {
   --tw-text-opacity: 1;
   color: rgb(53 112 189 / var(--tw-text-opacity));
@@ -2711,6 +2742,11 @@ video {
 .focus\:border-gray-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.focus\:bg-blue-500:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
