--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -734,6 +734,11 @@ video {
   margin-right: 0.75rem;
 }
 
+.mx-36 {
+  margin-left: 9rem;
+  margin-right: 9rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
