--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1168,6 +1168,10 @@ video {
   height: 100vh;
 }
 
+.h-\[4rem\] {
+  height: 4rem;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -1439,6 +1443,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[4rem\] {
+  width: 4rem;
 }
 
 .min-w-\[180px\] {
@@ -2099,16 +2107,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fafafa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-}
-
 .bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
@@ -2547,6 +2545,18 @@ video {
   font-size: 65px;
 }
 
+.text-\[\.5rem\] {
+  font-size: .5rem;
+}
+
+.text-\[\.2rem\] {
+  font-size: .2rem;
+}
+
+.text-\[\.8rem\] {
+  font-size: .8rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2967,16 +2977,6 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-blue-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .hover\:text-\[33px\]:hover {
   font-size: 33px;
 }
@@ -3068,16 +3068,6 @@ video {
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-blue-900:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(30 58 138 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-blue-100:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(219 234 254 / var(--tw-ring-opacity));
 }
 
 .group:hover .group-hover\:block {
