--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -823,6 +823,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-40 {
+  margin-bottom: 10rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -977,10 +981,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mb-40 {
-  margin-bottom: 10rem;
 }
 
 .block {
@@ -2011,6 +2011,11 @@ video {
   background-color: rgb(208 218 61 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#d87e17\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 126 23 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#e5fc18\] {
   --tw-bg-opacity: 1;
   background-color: rgb(229 252 24 / var(--tw-bg-opacity));
@@ -2019,6 +2024,11 @@ video {
 .bg-\[\#f8cc07\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 204 7 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fcd218\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 210 24 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#ff69b4\] {
@@ -2048,6 +2058,11 @@ video {
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-blue-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
 .bg-blue-950 {
@@ -2097,16 +2112,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-blue-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fcd218\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 210 24 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
